// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methodInstance1 1`] = `
"public async methodInstance1<T>(
  var1: string,
  var2: object = {},
): Promise<string[]> {
}
"
`;

exports[`methodInstance2 1`] = `
"protected abstract methodInstance2<T, V>(
): void;
"
`;

exports[`methodInstance3 1`] = `
"private async methodInstance3(
): void {
  /* BESPOKE START <<methodInstance3Bespoke>> */
  /* BESPOKE END <<methodInstance3Bespoke>> */
}
"
`;

exports[`methodInstance4 1`] = `
"private constructor(
  var1: string,
  public readonly var5: string,
) {
  /* BESPOKE START <<methodInstance4>> */
  /* BESPOKE END <<methodInstance4>> */
}
"
`;

exports[`methodInstance5 1`] = `
"public abstract constructor(
);
"
`;

exports[`methodStatic1 1`] = `
"public static async methodStatic1<T>(
  var1: string,
  var2: object = {},
): Promise<string[]> {
}
"
`;

exports[`methodStatic2 1`] = `
"protected static abstract methodStatic2<T, V>(
): void;
"
`;

exports[`methodStatic3 1`] = `
"private static async methodStatic3(
): void {
  /* BESPOKE START <<methodStatic3Bespoke>> */
  /* BESPOKE END <<methodStatic3Bespoke>> */
}
"
`;
